mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_access_undefined_field.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: Field 'undefined_field' not found on type 'C'
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/semantic_access_undefined_field.mux:6:10
   |
 6 | auto y = c.undefined_field
   |          ^
   |
= help: Available fields: x
